--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -417,7 +417,7 @@ select {
 
 
 
-.l_block { position: relative; }
+.l_block { position: relative; overflow: hidden; }
 .l_block__title { color: #fefeff; text-align: center; font-size: 85px; margin-bottom: 35px; line-height: 1.1; font-weight: bold; }
 
 
@@ -557,6 +557,7 @@ select {
 
 
 .staff {}
+.staff .wide { align-items: stretch; }
 .staff .wide__in:first-child { margin: 39px 0; flex: 0 0 calc(50% + 87px); }
 .staff .gdlr-core-pbf-background-wrap { max-width: 100%; }
 .staff__back { background-image: url(../img/staff.png); }
@@ -616,7 +617,7 @@ select {
 .comfort__back { background: url(../img/comfort.jpg) no-repeat scroll center / cover #1c2840;  }
 .comfort__in { width: 100%; max-width: 1805px; background-color: rgba(28,40,64,.51); position: relative; margin: 0 auto;}
 .comfort__in > .wrapper { display: flex; padding: 50px 30px; flex-wrap: wrap; }
-.comfort__title { flex: 0 0 50%; align-self: flex-end; margin-bottom: 70px; font-size: 85px; font-weight: bold; }
+.comfort__title { flex: 0 0 50%; align-self: flex-end; margin-bottom: 70px; font-size: 85px; font-weight: bold; line-height: 1.1; }
 .comfort__subtitle { flex: 0 0 50%; align-self: flex-end; margin-bottom: 90px; font-weight: 100; font-size: 16px; }
 .comfort_item { flex: 0 0 50%; margin-bottom: 35px; box-sizing: border-box; }
 .comfort_item__title { color: #fefeff; font-weight: bold; font-size: 31px; text-transform: uppercase; margin-bottom: 10px; }
@@ -632,7 +633,7 @@ select {
 .tasks__back { background: url(../img/tasks.jpg) no-repeat scroll center / cover #1c2840;  }
 .tasks__in { width: 100%; max-width: 1805px; background-color: rgba(28,40,64,.51); position: relative; margin: 0 auto;}
 .tasks__in:before { position: absolute; content: ''; margin: auto; top: -30px; bottom: -30px; right: 0; left: 0; max-width: 1200px; border: 2px solid #4a8c95; }
-.tasks__in > .wrapper { display: flex; padding: 25px 0; flex-wrap: wrap; }
+.tasks__in > .wrapper { display: flex; padding-top: 25px; padding-bottom: 25px; flex-wrap: wrap; }
 .tasks__title { flex: 0 0 100%; align-self: flex-end; margin-bottom: 70px; font-size: 85px; font-weight: bold; text-align: center; line-height: 1.1; }
 .tasks__list { flex: 0 0 100%; display: flex; flex-wrap: wrap; max-width: 1056px; margin-left: auto; margin-right: auto; }
 .tasks_item { flex: 0 0 50%; display: flex; align-items: flex-start; box-sizing: border-box; margin-bottom: 40px; }
@@ -676,14 +677,14 @@ select {
 .length_item__title { font-size: 19px; text-transform: uppercase; font-weight: bold; color: #095b94; margin-bottom: 10px; white-space: nowrap; }
 .length_item__num { font-size: 44px; text-transform: uppercase; font-weight: bold; color: #095b94; line-height: 1; display: inline; vertical-align: baseline; }
 .length_item__desc { font-size: 19px; font-weight: 100; color: #095b94; line-height: 1; display: inline; vertical-align: baseline; }
-.length_item:nth-last-child(-n+2) { margin-bottom: 35px;}
+/*.length_item:nth-last-child(-n+2) { margin-bottom: 35px;}*/
 .length_item:nth-child(even) { transition-delay: .2s !important; }
 .length__btn_wrap { display: flex; justify-content: flex-end; }
 
 .length__in-left-inside-map { position: absolute; margin: auto; display: block; top: 0; right: 0; bottom: 0; left: 0; z-index: 10; max-width: 100%; transition: all .5s ease; transform: perspective(700px) rotateY(-90deg); opacity: 0; }
 .length__in-left-inside-map.length__in-left-inside-map-active { transform: perspective(500px) rotateY(0); opacity: 1; }
 
-
+.length__in-left .btn { margin-top: 40px; }
 
 
 
