--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -78,11 +78,11 @@
 }
 
 @font-face {
-font-family: 'MyriadSetPro_Thin';
-src: url('../fonts/MyriadSetPro/MyriadSetPro_Thin.eot');
-src: local('☺'), url('../fonts/MyriadSetPro/MyriadSetPro_Thin.woff') format('woff'), url('../fonts/MyriadSetPro/MyriadSetPro_Thin.ttf') format('truetype'), url('../fonts/MyriadSetPro/MyriadSetPro_Thin.svg') format('svg');
-font-weight: normal;
-font-style: normal;
+  font-family: 'MyriadSetPro_Thin';
+  src: url('../fonts/MyriadSetPro/MyriadSetPro_Thin.eot');
+  src: local('☺'), url('../fonts/MyriadSetPro/MyriadSetPro_Thin.woff') format('woff'), url('../fonts/MyriadSetPro/MyriadSetPro_Thin.ttf') format('truetype'), url('../fonts/MyriadSetPro/MyriadSetPro_Thin.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 
@@ -593,7 +593,8 @@ select {
 .lvl > .wrapper,
 .lvl > .lvl_items,
 .lvl > .lvl__bottom { position: relative; z-index: 2; }
-.lvl__back { background: url(../img/lvl.jpg) no-repeat scroll center / cover #1c2840; }
+.lvl__back { background: url(../img/lvl.jpg) no-repeat scroll center / cover #1c2840; min-height: 100%; }
+.lvl_items { transition: height .7s ease; position: relative; overflow: hidden; will-change: height; }
 .lvl_item { margin-bottom: 50px; }
 .lvl_item__title { font-size: 31px; font-weight: bold; color: #fefeff; text-transform: uppercase; margin: 10px 0 15px; }
 .lvl_item__desc { font-size: 16px; font-weight: 100; color: #fefeff; }
