--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -914,6 +914,8 @@ select {
 .photo__title { color: #00b6bd; font-size: 85.51px; font-weight: bold; line-height: 1.1; margin-bottom: 35px; display: flex; align-items: center;}
 .photo_tabs { margin-left: auto; margin-right: auto; }
 
+.photo .wide__in { overflow: hidden; }
+
 
 
 .photo_tabs { display: flex;  }
