--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -535,8 +535,8 @@ select {
 .menu__toggle { font-size: 30px;  position: relative; z-index: 11; color: rgba(255,255,255,.7); transition: all .2s ease; margin-top: 9px; margin-left: 7px; display: inline-block; z-index: 1; }
 .menu__toggle:hover { color: #fff;}
 .menu__toggle i:before { margin: 0; padding: 0; }
-.menu__wrap { position: fixed; margin: auto; top: 0; left: 0; bottom: 0; right: 0; z-index: 10; background-color: rgba(13,35,63,.9); opacity: 0; visibility: hidden; transition: all .2s ease; display: flex; flex-direction: column; }
-.menu__wrap.menu__wrap-active { visibility: visible; opacity: 1; }
+.menu__wrap { position: fixed; margin: auto; top: 0; left: 0; bottom: 0; right: 0; z-index: 10; background-color: rgba(13,35,63,.9); opacity: 0; visibility: hidden; transition: all .2s ease; display: flex; flex-direction: column; display: none; overflow-y: auto; }
+.menu__wrap.menu__wrap-active { visibility: visible; opacity: 1; display: flex; }
 .menu__wrapper { padding: 0 15px; max-width: 1835px; width: 100%; margin: 0 auto; display: flex; flex-direction: column; align-items: flex-start; flex: 1 1 auto; margin-top: 45px; box-sizing: border-box; }
 .main_menu__list { margin-top: 20px; padding-left: 7px; }
 .main_menu__link { font-size: 30px; font-weight: bold; text-transform: uppercase; color: rgba(255,255,255,.7); transition: all .2s ease; line-height: 1.1; }
