--- a/dev/css/adaptive.css
+++ b/dev/css/adaptive.css
@@ -40,7 +40,7 @@
 	.menu__wrapper { margin-top: 0; }
 	.menu__toggle { padding: 37px 28px 25px; }
 
-	.main_menu__list { display: none; margin-left: 100px; }
+	.main_menu__list { display: none; margin-left: 100px; margin-right: 100px; }
 	.main_menu__list-accordeon { display: block; }
 	.main_menu_sub { margin-top: 0; margin-bottom: 0; }
 	.main_menu_sub__item { display: block; margin-bottom: 25px; }
@@ -208,8 +208,8 @@
 	.main_menu__list-accordeon .panel-heading { margin-bottom: 25px; }
 
 
-	.menu_icons { margin-left: auto; margin-right: auto; }
-	.menu_icons__item.menu_hor__icon { margin-left: 35px; margin-right: 35px; }
+	.menu_icons { margin-left: 100px; margin-right: 100px; }
+	.menu_icons__item.menu_hor__icon { margin-left: 5px; margin-right: 5px; }
 
 
 
@@ -596,11 +596,17 @@
 	.new_footer .wrapper { flex-direction: column; text-align: center; align-items: center; }
 	.new_footer__link { margin-top: 1em; }
 	.menu_icons { margin-left: 20px; margin-right: 20px; justify-content: space-between; }
-	.menu_icons__item.menu_hor__icon { width: 24px; height: 24px; margin-left: 5px; margin-right: 5px; }
+	.menu_icons__item.menu_hor__icon { width: 30px; height: 30px; margin-left: 5px; margin-right: 5px; }
 
 	.main_menu__list { margin-left: 0; }
 	.main_menu__list-accordeon .panel-heading { margin-bottom: 15px; }
 	.main_menu_sub__item { margin-bottom: 15px; }
+
+	.menu_icons_search { max-width: 220px; }
+	.menu_icons_search input { border-radius: 4px; padding: 10px 15px; font-size: 19.27px; }
+
+	.menu_icons { padding: 0; }
+
 
 
 }
