--- a/dev/css/inset.css
+++ b/dev/css/inset.css
@@ -81,7 +81,7 @@
 
 
 
-.main_inside { background-color: rgba(13,35,63,.75); margin-left: auto; margin-right: auto; margin-bottom: 21px; margin-top: 171px; max-width: 1500px; color: #fff; padding-top: 16px; padding-bottom: 26px; }
+.main_inside { background-color: rgba(13,35,63,.75); margin-left: auto; margin-right: auto; margin-bottom: 21px; margin-top: 171px; max-width: 1500px; color: #fff; padding-top: 16px; padding-bottom: 26px; width: 100%; }
 .main_inside .wrapper { max-width: 1260px; padding: 0 30px; }
 .main_inside .buy_tabs { justify-content: space-between; margin-bottom: 80px; }
 .main_inside .buy_tabs__item { padding: 0 10px; width: auto; }
