--- a/dev/css/adaptive.css
+++ b/dev/css/adaptive.css
@@ -648,6 +648,9 @@
 	.contacts_row > .buy_tabs li { margin-right: 0; }
 
 
+	.about_item__info { flex-wrap: wrap; }
+	.about_item__desc { flex: 0 0 100%; }
+	.about_item__img_wrap { flex: 0 0 100%; margin-left: 0; margin-top: 20px; text-align: center; }
 	
 }
 
